UtahLiveDataTest/src/objects/BudgetCategoryMapping__c.object
<CustomObject>
    <description>[Business]  Mapping of the Budget Category to Budget Category Mapping</description>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SourceBudgetCategory__c</fullName>
        <label>Source Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipName>Budget_Category_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TargetBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipName>Budget_Category_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MST: Budget Category Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SourceBudgetCategory__c</columns>
        <columns>TargetBudgetCategory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BCM-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Category Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>